@@ -963,9 +963,9 @@ These four vectors span $W$, but we also need to determine if they are linearly 
 \end{bmatrix}
 <![CDATA[&\rref]]>
 \begin{bmatrix}
-<![CDATA[\framebox{1} & 0 & -2 & 0\\]]>
-<![CDATA[0 & \framebox{1} & 0 & 0\\]]>
-<![CDATA[0 & 0 & 0 & \framebox{1}\\]]>
+<![CDATA[\leading{1} & 0 & -2 & 0\\]]>
+<![CDATA[0 & \leading{1} & 0 & 0\\]]>
+<![CDATA[0 & 0 & 0 & \leading{1}\\]]>
 <![CDATA[0 & 0 & 0 &0]]>
 \end{bmatrix}
 </alignmath>
