@@ -741,9 +741,9 @@ $S=\set{(0,\,2),\ (2,\,8)}$ linearly independent?
 \zerovector
 <![CDATA[&=(-1,\,-1)\\]]>
 <![CDATA[&=a(0,\,2) +b(2,\,8)&&]]>\text{<acroref type="definition" acro="RLD" />}\\
-<![CDATA[&=(0a+a-1,\,2a+a-1) + (2b+b-1,\,8b+b-1)&&\text{Scalar mult., <acroref type="example" acro="CVS" />}\\]]>
+<![CDATA[&=(0a+a-1,\,2a+a-1) + (2b+b-1,\,8b+b-1)&&]]>\text{Scalar mult., <acroref type="example" acro="CVS" />}\\
 <![CDATA[&=(a-1,\,3a-1) + (3b-1,\,9b-1)\\]]>
-<![CDATA[&=(a-1+3b-1+1,\,3a-1+9b-1+1)&&\text{Vector addition, <acroref type="example" acro="CVS" />}\\]]>
+<![CDATA[&=(a-1+3b-1+1,\,3a-1+9b-1+1)&&]]>\text{Vector addition, <acroref type="example" acro="CVS" />}\\
 <![CDATA[&=(a+3b-1,\,3a+9b-1)\\]]>
 </alignmath>
 From this we obtain two equalities, which can be converted to a homogeneous system of equations,
