@@ -1379,7 +1379,7 @@ This augmented matrix represents the linear system $x_1=1$, $x_2=-3$, $x_3=-4$, 
 <![CDATA[10x_2-10x_3-x_4&=1]]>
 </alignmath>
 </problem>
-<solution contributor="robertbeezer">The augmented matrix row-reduces to\\
+<solution contributor="robertbeezer">The augmented matrix row-reduces to
 <equation>
 \begin{bmatrix}
 <![CDATA[\leading{1} &  0 &  1 &  4/5 &  0\\]]>
@@ -1387,7 +1387,7 @@ This augmented matrix represents the linear system $x_1=1$, $x_2=-3$, $x_3=-4$, 
 <![CDATA[0 &  0 &  0 &  0 &  \leading{1}]]>
 \end{bmatrix}
 </equation>
-Row 3 represents the equation $0=1$, which is patently false, so the original system has no solutions.  We can express the solution set as the empty set, $\emptyset=\set{\relax}$.
+Row 3 represents the equation $0=1$, which is patently false, so the original system has no solutions.  We can express the solution set as the empty set, $\emptyset=\set{\ }$.
 </solution>
 </exercise>
 
@@ -1441,7 +1441,7 @@ which row-reduces to
 <![CDATA[0 & 0 & 0 & 0 & \leading{1}]]>
 \end{bmatrix}
 </equation>
-Row 3 represents the equation $0=1$, which is patently false, so the original system has no solutions.  We can express the solution set as the empty set, $\emptyset=\set{\relax}$.
+Row 3 represents the equation $0=1$, which is patently false, so the original system has no solutions.  We can express the solution set as the empty set, $\emptyset=\set{\ }$.
 </solution>
 </exercise>
 
@@ -1536,7 +1536,7 @@ which row-reduces to
 <![CDATA[ 0 & 0 & 0 & 0 & \leading{1}]]>
 \end{bmatrix}
 </equation>
-Row 3 represents the equation $0=1$, which is patently false, so the original system has no solutions.  We can express the solution set as the empty set, $\emptyset=\set{\relax}$.
+Row 3 represents the equation $0=1$, which is patently false, so the original system has no solutions.  We can express the solution set as the empty set, $\emptyset=\set{\ }$.
 </solution>
 </exercise>
 
