@@ -702,17 +702,17 @@ Clearly, choosing $f=0$ will yield the solution $abcde=563910$.  Furthermore, to
 </li></ol>
 </problem>
 <solution contributor="robertbeezer"><ol>
-<li> Does <q>baking</q> describe the potato or what is happening to the potato?\\
-Those are potatoes that are used for baking.\\
+<li> Does <q>baking</q> describe the potato or what is happening to the potato?<br />
+Those are potatoes that are used for baking.<br />
 The potatoes are being baked.
-</li><li> Are the apricots ripe, or just the pears?  Parentheses could indicate just what the adjective <q>ripe</q> is meant to modify.  Were there many apricots as well, or just many pears?\\
-He bought many pears and many ripe apricots.\\
+</li><li> Are the apricots ripe, or just the pears?  Parentheses could indicate just what the adjective <q>ripe</q> is meant to modify.  Were there many apricots as well, or just many pears?<br />
+He bought many pears and many ripe apricots.<br />
 He bought apricots and many ripe pears.
-</li><li> Is <q>sculpture</q> a single physical object, or the sculptor's style expressed over many pieces and many years?\\
-She likes his sculpture of the girl.\\
+</li><li> Is <q>sculpture</q> a single physical object, or the sculptor's style expressed over many pieces and many years?<br />
+She likes his sculpture of the girl.<br />
 She likes his sculptural style.
-</li><li> Was a decision made while in the bus, or was the outcome of a decision to choose the bus.  Would the sentence <q>I decided on the car,</q> have a similar double meaning?\\
-I made my decision while on the bus.\\
+</li><li> Was a decision made while in the bus, or was the outcome of a decision to choose the bus.  Would the sentence <q>I decided on the car,</q> have a similar double meaning?<br />
+I made my decision while on the bus.<br />
 I decided to ride the bus.
 </li></ol>
 </solution>
