@@ -10,6 +10,8 @@ Change:  Definition TSVS renamed as Definition SSVS
 Change:  Proof Technique D: discussion about definitions as nouns, adjectives
 Typo:  Proof of Theorem SLSLC: Doubled text macro in source (Glenna Toomey)
 Typo:  Solution S.T30: Corrected bolding on 'Proof' (Glenna Toomey)
+Typo:  LaTeX/XML formatting in Solutions RREF.C11, RREF.C13, RREF.C16 (Caden Robinson)
+Typo:  LaTeX/XML formatting in Solutions SSLE.M10, LISS.C21, B.C11 (Caden Robinson)
 
 
 MAJOR SOURCE FORMAT CHANGE
